Bug 483737 - akregator icon, in systray does not follow dark breeze theme.
Summary: akregator icon, in systray does not follow dark breeze theme.
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-16 09:43 UTC by Philippe ROUBACH
Modified: 2024-03-25 08:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02.2
Sentry Crash Report:


Attachments
Confirmed (1.41 KB, image/png)
2024-03-23 09:46 UTC, mobile.harvey
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2024-03-16 09:43:05 UTC
SUMMARY

akregator icon, in systray, does not follow dark breeze theme. A colorful icon is used instead.

SOFTWARE/OS VERSIONS

Operating System: openSUSE Tumbleweed 20240314
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Comment 1 Demitrius Belai 2024-03-21 14:48:03 UTC
Same here. Akregator is not using symbolic icon: https://invent.kde.org/pim/akregator/-/blob/423e676ac56f8faff99260d95879372e60a1d1f0/src/trayicon.cpp#L42
I changed the icon 'apps/akregator.svg' (for sizes: 16, 22, 24) and the Akregator tray icon changed. That proves akegrator is not using 'akregator-symbolic.svg' icon.
Comment 2 mobile.harvey 2024-03-23 09:46:49 UTC
Created attachment 167641 [details]
Confirmed

Confirmed on Neon 6.0.2 / Wayland / Akregator .deb 24.02.1.
Comment 3 Laurent Montel 2024-03-25 05:56:28 UTC
Git commit 4cabf93919c6e17cab0e4512197a690d8474c383 by Laurent Montel.
Committed on 25/03/2024 at 05:56.
Pushed by mlaurent into branch 'release/24.02'.

Fix 483737:  akregator icon, in systray does not follow dark breeze theme.

FIXED-IN: 24.02.2

M  +1    -1    src/trayicon.cpp

https://invent.kde.org/pim/akregator/-/commit/4cabf93919c6e17cab0e4512197a690d8474c383
Comment 4 Laurent Montel 2024-03-25 06:00:13 UTC
Git commit aeeade6d4c5482220b796301819d928a8ff0b134 by Laurent Montel.
Committed on 25/03/2024 at 06:00.
Pushed by mlaurent into branch 'master'.

Fix 483737:  akregator icon, in systray does not follow dark breeze theme.

FIXED-IN: 24.02.2

M  +1    -1    src/trayicon.cpp

https://invent.kde.org/pim/akregator/-/commit/aeeade6d4c5482220b796301819d928a8ff0b134
Comment 5 Philippe ROUBACH 2024-03-25 08:20:02 UTC
thanks