Fix 483737:  akregator icon, in systray does not follow dark breeze theme.

FIXED-IN: 24.02.2
BUG: 483737